[WOIN] enable weight one decimal place value
Support for fractional weight values to one decimal place; while the summation works as-is, Firefox throws a visible error and Chrome reports an error on mouse-over.

--- a/WOIN/WOIN.html
+++ b/WOIN/WOIN.html
@@ -444,7 +444,7 @@
                         <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_health" value="0" /></td>
                         <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_maxhealth" value="0" /></td>
                         <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_carry_rating" value="0" /></td>
-						<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_carried_total" value="0" /></td>
+						<td><input type="number" class="sheet-number2" style="width:80px;" name="attr_carried_total" step="0.1" value="0" /></td>
                     </tr>
                 </table>
             </div>
@@ -486,7 +486,7 @@
                                         <option value="Heavy">Heavy</option>
                                     </select>
                                 </td>
-                            <td><input type="number" class="sheet-number2" name="attr_Armor_weight" value="0" /></td>
+                            <td><input type="number" class="sheet-number2" name="attr_Armor_weight" step="0.1" value="0" /></td>
                             <td><input type="text" class="sheet-text3" name="attr_Armor_Ineffective" value="" placeholder="Blunt, Heat, Electricity"/></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_Armor_open" value="1"/><span></span></th>
                         </tr>
@@ -524,7 +524,7 @@
                                         <option value="Heavy">Heavy</option>
                                     </select>
                                 </td>
-                            <td><input type="number" class="sheet-number2" name="attr_Armor_weight" value="0" /></td>
+                            <td><input type="number" class="sheet-number2" name="attr_Armor_weight" step="0.1" value="0" /></td>
                             <td><input type="text" class="sheet-text3" name="attr_Armor_Ineffective" value="" placeholder="Blunt, Heat, Electricity"/></td>
                             <th><input type="checkbox" class="sheet-box" name="attr_Armor_open" value="1"/><span></span></th>
                         </tr>
@@ -558,7 +558,7 @@
                             <th>Range</th>
                             <th></th>
                         </tr>
-                        <tr>
+                        <tr><!-- <td><button type="roll" class="sheet-rollskill" name="roll_weapon1" value="&{template:default} {{name= @{weapon1_name} }} {{range= @{weapon1_range} }} {{attack= [[ (@{weaponattrib1_select} + @{weapon1_skill} - @{weapon1_damagemod}*2)d6]] }} {{damage= [[(@{weapon1_damage} + @{weapon1_damagemod})d6 + @{weapon1_damageadd} ]] }}"></button></td> -->
                             <td><button type="roll" class="sheet-rollskill" name="roll_weapon1" value="&{template:default} {{name= @{weapon1_name} }} {{range= @{weapon1_range} }} {{attack= [[ (@{weaponattrib1_select} + @{weapon1_skill} - @{weapon1_damagemod}*2)d6]] }} {{damage= [[(@{weapon1_damage} + @{weapon1_damagemod})d6 + @{weapon1_damageadd} ]] }}"></button></td>
                             <td><input type="text" class="sheet-text3" name="attr_weapon1_name" value="" placeholder="Weapon Name"/></td>
                             <td>
@@ -662,7 +662,7 @@
                                 <tr>
                                     <td><button type="roll" class="sheet-rollskill" name="roll_Equipment" value="&{template:default} {{name= @{Equipment_name} }} {{Notes= @{Equipment_notes} }}"></button></td>
                                     <td><input type="text" class="sheet-text3" name="attr_Equipment_name" value="" placeholder="Equipment Name"/></td>
-                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" value="0" /></td>
+                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" step="0.1" value="0" /></td>
                                     <th><input type="checkbox" class="sheet-box" name="attr_Equipment_open" value="1"/><span></span></th>
                                 </tr>
                             </table>
@@ -686,7 +686,7 @@
                                 <tr>
                                     <td><button type="roll" class="sheet-rollskill" name="roll_Equipment" value="&{template:default} {{name= @{Equipment_name} }} {{Notes= @{Equipment_notes} }}"></button></td>
                                     <td><input type="text" class="sheet-text3" name="attr_Equipment_name" value="" placeholder="Equipment Name"/></td>
-                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" value="0" /></td>
+                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" step="0.1" value="0" /></td>
                                     <th><input type="checkbox" class="sheet-box" name="attr_Equipment_open" value="1"/><span></span></th>
                                 </tr>
                             </table>
@@ -715,7 +715,7 @@
                                 <tr>
                                     <td><button type="roll" class="sheet-rollskillold" name="roll_Equipment" value="&{template:default} {{name= @{Equipment_name} }} {{Notes= @{Equipment_notes} }}"></button></td>
                                     <td><input type="text" class="sheet-text3" name="attr_Equipment_name" value="" placeholder="Equipment Name"/></td>
-                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" value="0" /></td>
+                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" step="0.1" value="0" /></td>
                                     <th><input type="checkbox" class="sheet-box" name="attr_Equipment_open" value="1"/><span></span></th>
                                 </tr>
                             </table>
@@ -739,7 +739,7 @@
                                 <tr>
                                     <td><button type="roll" class="sheet-rollskillold" name="roll_Equipment" value="&{template:default} {{name= @{Equipment_name} }} {{Notes= @{Equipment_notes} }}"></button></td>
                                     <td><input type="text" class="sheet-text3" name="attr_Equipment_name" value="" placeholder="Equipment Name"/></td>
-                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" value="0" /></td>
+                                    <td><input type="number" class="sheet-number2" style="width:80px;" name="attr_Equipment_weight" step="0.1" value="0" /></td>
                                     <th><input type="checkbox" class="sheet-box" name="attr_Equipment_open" value="1"/><span></span></th>
                                 </tr>
                             </table>
