added 3.8 version info

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1,4 +1,4 @@
-<input type='hidden' name='attr_character_sheet' value='Savage Worlds Tabbed v3.7' />
+<input type='hidden' name='attr_character_sheet' value='Savage Worlds Tabbed v3.8' />
 <script type="text/worker">
     /*----- Things I need to Care For -----
     -- o Option to ignore encumbrance    --
@@ -439,7 +439,7 @@
 
     /* ---- Begin Sheet Version Validation & Update ---- */
 
-    const sheetVersion = "3.7";
+    const sheetVersion = "3.8";
     const sheetVersionPrefix = "Savage Worlds Tabbed v";
 
     const upgradeSheet = function(version) {
@@ -723,7 +723,10 @@
             });
         }
         if (version < 3.7) {
-            // nothing to update in particular for 3.7.
+            // nothing to update in particular for that version.
+        }
+        if (version < 3.8) {
+            // nothing to update in particular for that version.
         }
 
         if (version < sheetVersion) {
@@ -8258,6 +8261,29 @@
                         </ul>
                     </div>
 
+                    <!-- Release 3.8 -->
+                    <label class="sheet-rowlabel">
+                        <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes38' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 3.8</h4></span>
+                    </label>
+                    <input type='checkbox' class='sheet-releasenotes' style='display: none;' name='attr_releasenotes38' value='1' />
+                    <div class='sheet-releasenotes'>
+                       <p data-i18n="changes-this-release">Changes this release:</p>
+                       <ul>
+                            <li><strong data-i18n="bug-fixes">Bug Fixes</strong></li>
+                            <ul>
+                                <li data-i18n="fix-rename-climbing-piloting-translations">Fix translations for Renaming Piloting and Climbing skills.</li>
+                                <li data-i18n="fix-attempt-allow-skill-on-by-default">Attempt to fix skills in Game Settings being all disabled by default (instead of enabled)</li>
+                            </ul>
+                            <li><strong data-i18n="sheet-enhancements">Functionality Enhancements</strong></li>
+                            <ul>
+                                <li data-i18n="change-linked-attribute-of-any-skill">Ability to change linked attribute of any skill.</li>
+                                <li data-i18n="enable-soak-from-settings">Can enable/disable Soak button from the game settings.</li>
+                                <li data-i18n="easier-disallow-skill-from-setting">Made it easier to enable/disable a skill in a setting (can click the skill name, not just the checkbox, in config panel)</li>
+                            </ul>
+                        </ul>
+                    </div>
+					
+					
                     <!-- Release 3.7 -->
                     <label class="sheet-rowlabel">
                         <input type='checkbox' class='sheet-releasenotes' name='attr_releasenotes37' value='1' /><span class='sheet-releasenotes' style='color: red;'><h4 class="sheet-rnversion"><span data-i18n="version">Version</span> 3.7</h4></span>
