Fix Show Modifiers option not working (until you unset and set it again) despite being on by default.

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -8063,9 +8063,9 @@
                         <label class='sheet-miscItem'><input type="checkbox" name="attr_useLoad" checked /> <span data-i18n="show-load-and-encumbrance">Show Load and Encumberance</span></label>
                         <label class='sheet-miscItem'><input type="checkbox" name="attr_showmods" checked /> <span data-i18n="show-modifiers">Show Modifiers For Trait Rolls</span></label>
                         <!-- Hidden Fields to set whether to show mods in the Roll Template or not -->
-                        <input type="hidden" name="attr_setmods" value="{{mods=[[1d0+@{absmod}+abs(@traitmods)]] }}" />
-                        <input type="hidden" name="attr_setmodsenc" value="{{mods=[[1d0+@{absmodenc}+abs(@traitmods))]] }} {{showenc=[[1d0+@{encumbrance}]]}} {{encumbrance=@{encumbrance}}}" />
-                        <input type="hidden" name="attr_setdmgmods" value="{{mods=[[1d0+abs(@traitmods)]] }}" />
+                        <input type="hidden" name="attr_setmods" value="{{mods=[[1d0+@{absmod}+abs(@{traitmods}) ]] }}" />
+                        <input type="hidden" name="attr_setmodsenc" value="{{mods=[[1d0+@{absmodenc}+abs(@{traitmods}) ]] }} {{showenc=[[1d0+@{encumbrance}]]}} {{encumbrance=@{encumbrance}}}" />
+                        <input type="hidden" name="attr_setdmgmods" value="{{mods=[[1d0+[[abs(@{damagemods})]] ]] }}" />
                         <!-- Hidden Fields to set the rest of the Roll Template Information -->
                         <input type="hidden" name="attr_showtraitmods" value="{{showtt=[[1d0+@{traitmods}]]}} {{ttmod=@{traitmods}}} {{showwounds=[[1d0+@{woundsMod}]]}} {{wounds=-@{woundsMod} }} {{showfatigue=[[1d0+@{fatigue}]]}} {{fatigue=-@{fatigueMod}}} {{showdistracted=[[1d0+@{distracted}]]}} {{distracted=@{distracted}}}" />
                         <input type="hidden" name="attr_showdmgmods" value="{{showdmg=[[1d0+@{damagemods}]]}} {{ttmod=@{traitmods}}}" />
@@ -8273,6 +8273,7 @@
                             <ul>
                                 <li data-i18n="fix-rename-climbing-piloting-translations">Fix translations for Renaming Piloting and Climbing skills.</li>
                                 <li data-i18n="fix-attempt-allow-skill-on-by-default">Attempt to fix skills in Game Settings being all disabled by default (instead of enabled)</li>
+                                <li data-i18n="fix-show-modifier-not-working-at-start">Fix Show Modifiers option not working (until you unset and set it again) despite being on by default.</li>
                             </ul>
                             <li><strong data-i18n="sheet-enhancements">Functionality Enhancements</strong></li>
                             <ul>
